Rewritten some tests using structured concurrency feature from JDK 21